# pg_vectorize

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  README.md  docker-compose.yml
.github/workflows/: build-vector-serve.yml  extension_ci.yml  extension_upgrade.yml  pg-image-build.yml
extension/: Makefile
python/: pyproject.toml
python/src/example/: usage.py
python/src/pgvectorzie/: __init__.py  client.py  config.py  connection.py  guc.py
