[project]
name = "pgvectorzie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.7",
]
[project.scripts]
pgvectorzie = "pgvectorzie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
